added data and images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>BirdsofBelgaum</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,64 +20,87 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1 style="color:#16163F">Birds of Belgaum</h1>
+							<p class="major">A pocket guide to the common birds of the region. <br> A project by GSS College, Belgaum, released under the <a href="https://html5up.net/license">Creative Commons</a></p>
+							<p><h3>Publication Team</h3>
+							Shashank Borkar , Rahul Prabhukhanolkar, Praveen Patil
+							<h3>Photo Credits</h3>
+							Niranjan Sant
+							<h3>Design</h3>
+							Mohit Yalagi</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li style="color:#34355D"><a href="#first" class="button big wide smooth-scroll-middle">  More info</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/indian-roller.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Belgaum/Belagavi</h2>
+							<p>Belagavi, also formerly known as  Belgaum (Venugram), is the largest district in Karnataka sharing boundaries with Goa and Maharashtra state towards  western and northern directions. With an expanse of 13,415 sq. KM , the Belgaum has diverse habitats and landscapes, including wet and drier climatic zones.
+<br>Western side of the district is part of  Western Ghats is one of the most ecologically significant biological regions of the world. These hill ranges are recognized as a unique biogeographic province (Mani 1974), a global biodiversity hotspot (Myers et al. 2000), and as one of the 200 most important eco-regions of the world (Olson & Dinerstein 1998). 
+<br>District already has 1230 sq km of area under forest land, including Bhimgad Wildlife Sanctuary,  Ghatprabha Bird Sanctuary,  IBA Bhimgad Forests (IN183- IBA Criteria - A1, A2, A3, BirdLife International 2023). 
+In spite of the rich natural heritage, the region has not been scientifically assessed  for the many taxa.  To bridge this gap this paper presents the   first  comprehensive checklist of the regional avifauna.
+<br>Belgaum receives an average rainfall of  550 cm rain in region adjoining to the western ghats, about 120 cms of rain around the Belagavi city and goes on reducing towards eastern side to about 25 cm. The temperature ranges from  8°C to 42°C. The plant life in the region is extremely rich since the climatic conditions give rise to a wide range of habitats.
+<br>In the western region along the western ghats, the terrain is undulating with steep escarpments and dense forests. There are three well-defined seasons : the monsoon spanning from June to around October, the winter from November to February, and the summer, from March to May. 
+<br>The habitats range from the tropical wet evergreen, semi-evergreen forests, tropical moist deciduous forests, tropical dry deciduous forests, tropical thorn vegetation, grasslands, and agricultural lands to wetlands. In general, the vegetation turns drier as one moves from west to east (into the rain shadow region) across the hills. Lower elevations on the eastern region receive less than 500 mm of annual rainfall and contain tropical dry deciduous and thorny forests (Champion & Seth 1968). </p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/fulvetta.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Birds</h2>
+							<p>Bird are a vital component of any ecosystem and play a crucial role in pollination, seed dispersal & pest control. Interesting behaviour, attractive colours, melodious calls/songs (acoustics), ecological services etc. has attracted many to pursue  Ornithology (science of birding) as carrier path. 
+Birds inhabit every continent, and are among the most diverse vertebrate groups on Earth. Out of > 1256 species recorded in India, more than 430 bird species are reported from Belgaum (Belagavi district) region by team of dedicated birders. This high diversity is due to the mosaic of natural habitats varying from Tropical evergreen - Deciduous forests, grasslands, thorny scrub, rock outcrops, & arid landscape spread across wet and dry climatic zones.  </p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/purple-heron.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>Birding essentials & resources  </h2>
+							<p>Interesting information related to bird diversity, ecology, conservation, distribution, acoustics etc. can be found on following websites. 
+							<p><a href="https://indiabiodiversity.org/" target="_blank">India Biodiversity Portal</a> </p>
+							<p><a href="https://www.iucn.org/" target="_blank">IUCN</a> </p>
+							<p><a href="https://www.indianbirds.in/" target="_blank">Indian birds</a> </p>
+							<p><a href="https://indianbirds.in/pdfs/IB_11_5_6_Final.pdf" target="_blank">Checklist of Birds of India (Praveen J list 2016)</a> </p>
+							<p><a href="https://xeno-canto.org/" target="_blank">Xenocanto</a> </p>
+							<p><a href="https://ebird.org/home" target="_blank">Ebird </a> </p>
+							<p><a href="https://ravensoundsoftware.com/" target="_blank">Raven Bioacoustics</a> </p>
+							<p><a href="https://www.wildlifeacoustics.com/" target="_blank">Wildlife Acoustics</a> </p>
+							<p><a href="http://wiienvis.nic.in/" target="_blank">INVIS WII Wildlife conservation and protected areas in India</a> </p>
+							
+							<!--<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/pied kingfisher.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Birding hotspots in Belgaum</h2>
+							<p>Vaccine Depot <br> Yellur region<br> Jamboti<br> Bhimgad Sanctuary<br> Ghataprabha Bird Sanctuary<br> Hidkal Backwaters. </p>
 						</div>
 
 						<!-- Gallery -->
@@ -87,8 +110,8 @@
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -99,8 +122,8 @@
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -111,8 +134,8 @@
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -123,8 +146,8 @@
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -135,8 +158,8 @@
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -147,8 +170,8 @@
 										<img src="images/gallery/thumbs/06.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -159,8 +182,8 @@
 										<img src="images/gallery/thumbs/07.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -171,8 +194,8 @@
 										<img src="images/gallery/thumbs/08.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -183,8 +206,8 @@
 										<img src="images/gallery/thumbs/09.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -195,8 +218,8 @@
 										<img src="images/gallery/thumbs/10.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -207,8 +230,8 @@
 										<img src="images/gallery/thumbs/11.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -219,8 +242,8 @@
 										<img src="images/gallery/thumbs/12.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3></h3>
+										<p></p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -233,9 +256,11 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-							<div class="items style1 medium onscroll-fade-in">
+							<h2> Birds of Belgaum - Download the pocket guide</h2>
+							<p>Click on the image to download it:<p>
+								<a href="/images/BoBpocketguide.pdf" download>
+								<img src="/images/BoBpocketguide.pdf" alt="" width="104" height="142"></a>
+							<!--<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Lorem</h3>
@@ -296,12 +321,12 @@
 									<h3>Risus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
-							</div>
+							</div>-->
 						</div>
 					</section>
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
+					<!--<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
@@ -325,7 +350,7 @@
 							</form>
 
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
@@ -337,7 +362,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p> Website designed by <a href="http://www.gnovi.in/sample-page/" target="_blank">Praveen Patil (Gnovi)</a>.</p>
 						</div>
 					</footer>
 
