--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@ Birds inhabit every continent, and are among the most diverse vertebrate groups 
 						<div class="inner">
 							<h2> Birds of Belgaum - Download the pocket guide</h2>
 							<p>Click on the image to download it:<p>
-								<a href="/images/BoBpocketguide.pdf" download>
-								<img src="/images/BoBpocketguide.pdf" alt="" width="104" height="142"></a>
+								<a href="https://github.com/makerspacebelgaum/birdsofbelgaum/blob/main/birdsofbelgaum.pdf" download>
+								<img src="/images/black breasted.jpg" alt="" width="" height=""></a>
 							<!--<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
