--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Birds inhabit every continent, and are among the most diverse vertebrate groups 
 							<h2> Birds of Belgaum - Download the pocket guide</h2>
 							<p>Click on the image to download it:<p>
 								<a href="https://github.com/makerspacebelgaum/birdsofbelgaum/blob/main/birdsofbelgaum.pdf" download>
-								<img src="/images/black breasted.jpg" alt="" width="" height=""></a>
+								<img src="/images/black breasted.jpg" alt=""></a>
 							<!--<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
