--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<h3>Design</h3>
 							Mohit Yalagi</p>
 							<ul class="actions stacked">
-								<li style="color:#34355D"><a href="#first" class="button big wide smooth-scroll-middle">  More info</a></li>
+								<li style="color:#34355D"><a href="#first" class="button big wide smooth-scroll-middle">  Download the pocket guide</a></li>
 							</ul>
 						</div>
 						<div class="image">
