--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<h3>Design</h3>
 							Mohit Yalagi</p>
 							<ul class="actions stacked">
-								<li style="color:#34355D"><a href="#first" class="button big wide smooth-scroll-middle">  Download the pocket guide</a></li>
+								<li style="color:#34355D"><a href="#download" class="button big wide smooth-scroll-middle">  Download the pocket guide</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -254,7 +254,7 @@ Birds inhabit every continent, and are among the most diverse vertebrate groups 
 					</section>
 
 				<!-- Six -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="download">
 						<div class="inner">
 							<h2> Birds of Belgaum - Download the pocket guide</h2>
 							<p>Click on the image to download it:<p>
