--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1 style="color:#16163F">Birds of Belgaum</h1>
-							<p class="major">A pocket guide to the common birds of the region. <br> A project by GSS College, Belgaum, released under the <a href="https://html5up.net/license">Creative Commons</a></p>
-							<p><h3>Publication Team</h3>
+							<p class="major">A pocket guide to the common birds of the region. <br> A project by GSS College, Belgaum, released under the <a href="https://creativecommons.org/licenses/by/3.0/" target="blank">Creative Commons</a></p>
+							<p><h3 style="color:#16163F">Publication Team</h3>
 							Shashank Borkar , Rahul Prabhukhanolkar, Praveen Patil
-							<h3>Photo Credits</h3>
+							<h3 style="color:#16163F">Photo Credits</h3>
 							Niranjan Sant
-							<h3>Design</h3>
+							<h3 style="color:#16163F">Design</h3>
 							Mohit Yalagi</p>
 							<ul class="actions stacked">
 								<li style="color:#34355D"><a href="#download" class="button big wide smooth-scroll-middle">  Download the pocket guide</a></li>
