pdf opens in google viewer

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Birds inhabit every continent, and are among the most diverse vertebrate groups 
 						<div class="inner">
 							<h2> Birds of Belgaum - Download the pocket guide</h2>
 							<p>Click on the image to download it:<p>
-								<a href="birdsofbelgaum.pdf" download>
+								<a href="https://docs.google.com/viewer?url=https://birds.makerspacebgm.in/birdsofbelgaum.pdf">
 								<img src="images/black breasted.jpg" alt="" width="200" height="172"></a>
 							<!--<div class="items style1 medium onscroll-fade-in">
 								<section>
